feat: 解决新版安装包路径继承问题；更改应用数据存储路径为外部路径